[package]
name = "yarapi"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yarapi"
repository = "https://github.com/golemfactory/yarapi"
license = "LGPL-3.0"
description="hi-level api for new Golem"
keywords=["golem", "yagna"]



[dependencies]
ya-client = { version = "0.3", features = ["sgx"] }
ya-client-model = "0.1"
gftp = "0.1"
ya-agreement-utils = "0.1"

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
bigdecimal = "0.1.0"
chrono = "0.4.10"
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
log = "0.4"
secp256k1 = "0.17"
semver = "0.10.0"
serde_json = "1.0"
sha3 = "0.9.1"
tokio = { version = "0.2.10", features = ["fs"] }
url = "2.1.1"

[dev-dependencies]
structopt = "0.3"

[patch.crates-io]
ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "62cab235ea07e7ec2c9c04148a63e09cd299da24"}
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "62cab235ea07e7ec2c9c04148a63e09cd299da24"}
