[package]
name = "yarapi"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yarapi"
repository = "https://github.com/golemfactory/yarapi"
license = "LGPL-3.0"
description="hi-level api for new Golem"
keywords=["golem", "yagna"]



[dependencies]
ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "50c530fb54fbb91a9ad743f43f2c6e0b3fc3b34f", features = ["sgx"] }
gftp = "0.1.2"
ya-agreement-utils = { git = "https://github.com/golemfactory/yagna.git", rev = "a556eebdf10396124b3cf43b719e7ca9ea85e984" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
bigdecimal = "0.1.0"
chrono = { version = "0.4.10", features = ["clock"] }
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
futures-core = "0.3.8"
futures-util = "0.3.7"
log = "0.4"
pin-project = "1.0.2"
secp256k1 = "0.17"
semver = "0.10.0"
serde = "1.0.118"
serde_json = "1.0"
sha3 = "0.9.1"
tokio = { version = "0.2.10", features = ["fs"] }
url = "2.1.1"

notify = "4.0.12"

[dev-dependencies]
structopt = "0.3"
tokio = { version = "0.2.10", features = ["macros"] }

[package.metadata.release]
no-dev-version = true
enable-all-features = true


#[patch.crates-io]
#ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "50c530fb54fbb91a9ad743f43f2c6e0b3fc3b34f", features = ["sgx"] }
