[package]
name = "yarapi"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yarapi"
repository = "https://github.com/golemfactory/yarapi"
license = "LGPL-3.0"
description="hi-level api for new Golem"
keywords=["golem", "yagna"]



[dependencies]
ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "a5bfc61da8f3a5cdcafcacf3d48a9f706571a9d7", features = ["sgx"] }
gftp = { git = "https://github.com/golemfactory/yagna.git", rev = "552859220b764b39984580aacf0a81475b75da2e" }
ya-agreement-utils = { git = "https://github.com/golemfactory/yagna.git", rev = "552859220b764b39984580aacf0a81475b75da2e" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "^1.0"
bigdecimal = "0.1.0"
chrono = { version = "0.4.10", features = ["clock"] }
dotenv = "^0.15.0"
env_logger = "^0.6"
futures = "^0.3"
futures-core = "0.3.8"
futures-util = "0.3.7"
log = "^0.4"
pin-project = "1.0.2"
secp256k1 = "0.17"
semver = "^0.10.0"
serde = "^1.0"
serde_json = "^1.0"
sha3 = "0.9.1"
tempfile = "^3.1.0"
thiserror = "^1.0"
tokio = { version = "0.2.10", features = ["fs"] }
url = "2.1.1"

notify = "4.0.12"

[dev-dependencies]
structopt = "0.3"
tokio = { version = "0.2.10", features = ["macros"] }

[package.metadata.release]
no-dev-version = true
enable-all-features = true


#[patch.crates-io]
#ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "0efbf2f875d804a283d162fc9e1679516be08900"}
